--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     margin: 10px;
     flex-wrap: wrap;
     border: 5px solid black;
+    box-shadow: 10px 15px rgba(192,192,192,0.5)
 }
 
 .flex-item {
