--- a/style.css
+++ b/style.css
@@ -4,158 +4,144 @@
     margin: 10px;
     flex-wrap: wrap;
     border: 5px solid black;
-    box-shadow: 10px 15px rgba(192,192,192,0.5)
+    box-shadow: 15px 20px rgba(192,192,192,0.5)
 }
 
 .flex-item {
     flex: 1 150px;
     height: 150px;
-    text-align: center;
     line-height: 100px;
-    margin: 2px;
     background-color: #fff;
+    border: 5px solid black;
 }
 
 .flex-item2 {
     background-color: yellow;
     flex: 0 30 150px;
     height: 150px;
-    text-align: center;
     line-height: 100px;
-    margin: 2px;
+    border: 5px solid black;
 }
 
 .flex-item3 {
     background-color: blue;
     flex: 5 150px;
     height: 150px;
-    text-align: center;
     line-height: 100px;
-    margin: 2px;
+    border: 5px solid black;
 }
 
 .flex-item5 {
     background-color: red;
     flex: 0 10 150px;
     height: 150px;
-    text-align: center;
     line-height: 100px;
-    margin: 2px;
+    border: 5px solid black;
 }
 
 .flex-item6 {
     background-color: red;
     flex: 1 150px;
     height: 150px;
-    text-align: center;
     line-height: 100px;
-    margin: 2px;
+    border: 5px solid black;
 }
 
 .flex-item7 {
     background-color: black;
-    flex: 0 30 150px;
+    flex: 0 15 150px;
     height: 150px;
-    text-align: center;
     line-height: 100px;
-    margin: 2px;
+    border: 5px solid black;
 }
 
 .flex-item9 {
     background-color: yellow;
     flex: 1 150px;
     height: 150px;
-    text-align: center;
     line-height: 100px;
-    margin: 2px;
+    border: 5px solid black;
 }
 
 .flex-item13{
     background-color: blue;
     flex: 1 150px;
     height: 150px;
-    text-align: center;
     line-height: 100px;
-    margin: 2px;
+    border: 5px solid black;
 }
 
 .flex-item11{
     background-color: yellow;
     flex: 1 150px;
     height: 150px;
-    text-align: center;
     line-height: 100px;
-    margin: 2px;
+    border: 5px solid black;
 }
 
 .flex-item10 {
     background-color: blue;
     flex: 1 150px;
     height: 150px;
-    text-align: center;
     line-height: 100px;
-    margin: 2px;
+    border: 5px solid black;
 }
 
 .flex-item14 {
     background-color: red;
     flex: 1 150px;
     height: 150px;
-    text-align: center;
     line-height: 100px;
-    margin: 2px;
+    border: 5px solid black;
 }
 
 .flex-item16 {
     background-color: blue;
     flex: 0 20 150px;
-    text-align: center;
+    height: 150px;
     line-height: 100px;
-    margin: 2px;
+    border: 5px solid black;
 }
 
 .flex-item18 {
     background-color: yellow;
     flex: 0 30 150px;
     height: 150px;
-    text-align: center;
     line-height: 100px;
-    margin: 2px;
+    border: 5px solid black;
+
 }
 
 .flex-item19 {
     background-color: black;
     flex: 0 30 150px;
     height: 150px;
-    text-align: center;
     line-height: 100px;
-    margin: 2px;
+    border: 5px solid black;
 }
 
 .flex-item20 {
     background-color: yellow;
     flex: 1 150px;
-    text-align: center;
+    height: 150px;
     line-height: 100px;
-    margin: 2px;
+    border: 5px solid black;
 }
 
 .flex-item21 {
     background-color: red;
-    flex: 0 15 150px;
+    flex: 0 15 50px;
     height: 150px;
-    text-align: center;
     line-height: 100px;
-    margin: 2px;
+    border: 5px solid black;
 }
 
 .flex-item22 {
     background-color: black;
-    flex: 10 150px;
+    flex: 0 15 150px;
     height: 150px;
-    text-align: center;
     line-height: 100px;
-    margin: 2px;
+    border: 5px solid black;
 }
 
 
@@ -163,25 +149,22 @@
     background-color: yellow;
     flex: 0 10 150px;
     height: 150px;
-    text-align: center;
     line-height: 100px;
-    margin: 2px;
+    border: 5px solid black;
 }
 
 .flex-item24 {
-    background-color: red;
-    flex: 0 15 150px;
+    background-color: white;
+    flex: 0 5 150px;
     height: 150px;
-    text-align: center;
     line-height: 100px;
-    margin: 2px;
+    border: 5px solid black;
 }
 
 .flex-item25 {
     background-color: blue;
-    flex: 1 1 150px;
+    flex: 2 150px;
     height: 150px;
-    text-align: center;
     line-height: 100px;
-    margin: 2px;
+    border: 5px solid black;
 }
