--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
 
 .flex-item3 {
     background-color: blue;
-    flex: 5 150px;
+    flex: 0 50 150px;
     height: 150px;
     line-height: 100px;
     border: 5px solid black;
@@ -65,7 +65,7 @@
 
 .flex-item13{
     background-color: blue;
-    flex: 1 150px;
+    flex: 0 40 150px;
     height: 150px;
     line-height: 100px;
     border: 5px solid black;
